# alpha_hunter

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml  deploy.yml
configs/: backtest.yaml  base.yaml  best_optuna_config.yaml  model.yaml  training.yaml
data/raw/: SPY_2010-01-01_2026-06-01.parquet
results/: backtest_equity.csv  xgboost_backtest.csv  xgboost_regressor_backtest.csv
results/models/: best_model.pth
scripts/: download_data.py  optimize.py  run_experiment.py  train_xgboost.py  train_xgboost_regressor.py
src/: __init__.py  main.py
src/backtest/: __init__.py  metrics.py  simulator.py
src/data/: __init__.py  loader.py  pipeline.py
src/features/: __init__.py  regime.py  target.py  technical.py
src/models/: __init__.py  ensemble.py  transformer_gru.py
src/training/: __init__.py  callbacks.py  optimizer.py  trainer.py
src/utils/: __init__.py  config.py  logging.py  visualization.py
tests/: __init__.py  test_backtest.py  test_data_pipeline.py  test_models.py  test_training.py
