[project]
name = "alpha-hunting"
version = "0.1.0"
description = "High‑dimensional alpha hunting with Transformer‑GRU"
authors = [{name = "Your Name", email = "you@example.com"}]
dependencies = [
    "torch>=2.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "optuna>=4.0.0",
    "pyarrow>=17.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.7.0",
    "loguru>=0.7.0",
    "yfinance>=0.2.0",
]
[project.scripts]
alpha-train = "src.main:train"
alpha-backtest = "src.main:backtest"

[tool.uv]
dev-dependencies = ["pytest>=8.0", "ruff>=0.4.0", "mypy>=1.10.0"]