[project]
name = "alpha-hunting"
version = "0.1.0"
description = "High-dimensional alpha hunting with Hybrid Transformer-GRU"
authors = [{name = "Senior Quant", email = "quant@alphafirm.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "optuna>=4.0.0",
    "pyarrow>=17.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.7.0",
    "loguru>=0.7.0",
    "yfinance>=0.2.0",
    "click>=8.1.0",
    "xgboost>=3.3.0",
]

[project.scripts]
alpha-run = "src.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "T20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
